--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <packaging>pom</packaging>
   <version>0.8.4-SNAPSHOT</version>
   <name>Sitebricks :: Parent</name>
-  <url>http://code.google.com/p/google-sitebricks/</url>
+  <url>https://github.com/dhanji/sitebricks</url>
 
   <properties>
     <guice.version>3.0</guice.version>
@@ -257,9 +257,9 @@
   </dependencyManagement>
   
   <scm>
-    <connection>scm:svn:http://google-sitebricks.googlecode.com/svn/trunk</connection>
-    <developerConnection>scm:svn:https://google-sitebricks.googlecode.com/svn/trunk</developerConnection>
-    <url>http://code.google.com/p/google-sitebricks/source/browse</url>
+    <connection>scm:git:http://github.com/dhanji/sitebricks</connection>
+    <developerConnection>scm:git:git://github.com/dhanji/sitebricks</developerConnection>
+    <url>https://github.com/dhanji/sitebricks</url>
   </scm>
 
   <build>
