--- a/sitebricks-web/pom.xml
+++ b/sitebricks-web/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.4</version>
+    <version>0.8.5-SNAPSHOT</version>
   </parent>  
   <artifactId>sitebricks-web</artifactId>
   <name>Sitebricks :: Archetype</name>
