--- a/sitebricks-web/pom.xml
+++ b/sitebricks-web/pom.xml
@@ -1,7 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <!--
-   | 
-   | We will make a Maven archetype out of this project
+   |
+   | The sitebricks.info webapp. Can be used as a learning example.
    |
    |-->
   <modelVersion>4.0.0</modelVersion>
@@ -9,9 +11,10 @@
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
     <version>0.8.5-SNAPSHOT</version>
-  </parent>  
+  </parent>
   <artifactId>sitebricks-web</artifactId>
-  <name>Sitebricks :: Archetype</name>
+  <name>Sitebricks :: Info Website</name>
+  
   <dependencies>
     <dependency>
       <groupId>com.google.sitebricks</groupId>
@@ -28,6 +31,16 @@
     <dependency>
       <groupId>org.mortbay.jetty</groupId>
       <artifactId>servlet-api-2.5</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.markdownj</groupId>
+      <artifactId>markdownj</artifactId>
+      <version>0.3.0-1.0.2b4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-core</artifactId>
+      <version>3.0.2</version>
     </dependency>
   </dependencies>
 </project>
