--- a/sitebricks-options/pom.xml
+++ b/sitebricks-options/pom.xml
@@ -32,6 +32,12 @@
       <version>3.0</version>
     </dependency>
     <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-full</artifactId>
+      <version>2.0.2</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <version>5.8</version>
