--- a/sitebricks-web/pom.xml
+++ b/sitebricks-web/pom.xml
@@ -60,6 +60,10 @@
       <artifactId>db4o-full-java5</artifactId>
       <version>8.0-SNAPSHOT</version>
     </dependency>
-
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>${ch.qos.logback.version}</version>
+    </dependency>
   </dependencies>
 </project>
