Message extraction with body, and some tests

--- a/sitebricks-mail/pom.xml
+++ b/sitebricks-mail/pom.xml
@@ -52,6 +52,13 @@
       <artifactId>logback-core</artifactId>
       <version>${ch.qos.logback.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>5.8</version>
+      <classifier>jdk15</classifier>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
