Extract mail message headers better

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>sitebricks-web</module>
     <module>sitebricks-mail</module>
     <module>sitebricks-options</module>
+    <module>sitebricks-jetty-archetype</module>
     <module>stat</module>
     <module>slf4j</module>
   </modules>
