--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.5-SNAPSHOT</version>
+    <version>0.8.5</version>
   </parent>  
   <artifactId>sitebricks-slf4j</artifactId>
   <name>Sitebricks :: SLF4J Module</name>
