--- a/stat/pom.xml
+++ b/stat/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.5-SNAPSHOT</version>
+    <version>0.8.5</version>
   </parent>  
   <artifactId>sitebricks-stat</artifactId>
   <name>Sitebricks :: Statistics</name>
