[maven-release-plugin] prepare for next development iteration

--- a/sitebricks-jetty-archetype/pom.xml
+++ b/sitebricks-jetty-archetype/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.5</version>
+    <version>0.8.6-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-jetty-archetype</artifactId>
   <name>Sitebricks :: Jetty Archetype</name>
