--- a/sitebricks-mail/pom.xml
+++ b/sitebricks-mail/pom.xml
@@ -53,9 +53,9 @@
       <version>${ch.qos.logback.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.james</groupId>
-      <artifactId>apache-mime4j-core</artifactId>
-      <version>0.7</version>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.0</version>
     </dependency>
     <dependency>
       <groupId>org.testng</groupId>
