--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <org.testng.version>5.8</org.testng.version>
     <ch.qos.logback.version>0.9.9</ch.qos.logback.version>
   </properties>
-  
+
   <modules>
     <module>sitebricks</module>
     <module>sitebricks-converter</module>
@@ -37,7 +37,7 @@
     <module>stat</module>
     <module>slf4j</module>
   </modules>
-  
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -49,36 +49,36 @@
         <groupId>com.google.sitebricks</groupId>
         <artifactId>sitebricks</artifactId>
         <version>${project.version}</version>
-      </dependency>      
+      </dependency>
       <dependency>
         <groupId>com.google.sitebricks</groupId>
         <artifactId>stat</artifactId>
         <version>${project.version}</version>
-      </dependency>      
+      </dependency>
       <dependency>
         <groupId>com.google.sitebricks</groupId>
         <artifactId>sitebricks-client</artifactId>
         <version>${project.version}</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>org.mvel</groupId>
         <artifactId>mvel2</artifactId>
-        <version>2.0.18</version>
-      </dependency>   
-      
+        <version>2.1.Beta6</version>
+      </dependency>
+
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>r09</version>
       </dependency>
-      
+
       <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
         <version>1.6</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>com.google.inject</groupId>
         <artifactId>guice</artifactId>
@@ -93,105 +93,105 @@
         <groupId>com.google.inject.extensions</groupId>
         <artifactId>guice-multibindings</artifactId>
         <version>${guice.version}</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>net.jcip</groupId>
         <artifactId>jcip-annotations</artifactId>
         <version>1.0</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>com.intellij</groupId>
         <artifactId>annotations</artifactId>
         <version>7.0.3</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>org.freemarker</groupId>
         <artifactId>freemarker</artifactId>
         <version>2.3.10</version>
       </dependency>
-      
+
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>1.4</version>
       </dependency>
-      
+
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
         <version>20040616</version>
-      </dependency> 
-      
+      </dependency>
+
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
         <version>2.5</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>com.ning</groupId>
         <artifactId>async-http-client</artifactId>
         <version>1.6.3</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
       </dependency>
-      
+
       <dependency>
         <groupId>com.thoughtworks.xstream</groupId>
         <artifactId>xstream</artifactId>
         <version>1.3.1</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-core-asl</artifactId>
         <version>${org.codehaus.jackson.version}</version>
-      </dependency>      
+      </dependency>
       <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-mapper-asl</artifactId>
         <version>${org.codehaus.jackson.version}</version>
-      </dependency> 
-      
+      </dependency>
+
       <dependency>
         <groupId>jaxen</groupId>
         <artifactId>jaxen</artifactId>
         <version>1.1.1</version>
       </dependency>
-      
+
       <dependency>
         <groupId>saxpath</groupId>
         <artifactId>saxpath</artifactId>
         <version>1.0-FCS</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
         <groupId>dom4j</groupId>
         <artifactId>dom4j</artifactId>
         <version>1.6.1</version>
-      </dependency>      
-      
+      </dependency>
+
       <dependency>
       <!-- jsoup HTML library @ http://jsoup.org/ -->
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
         <version>1.5.2</version>
       </dependency>
-      
-      
+
+
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.5.5</version>
       </dependency>
-      
+
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
@@ -201,7 +201,7 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>${ch.qos.logback.version}</version>
-      </dependency>      
+      </dependency>
 
       <dependency>
         <groupId>org.easymock</groupId>
@@ -209,7 +209,7 @@
         <version>2.4</version>
         <scope>test</scope>
       </dependency>
-      
+
       <dependency>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty</artifactId>
@@ -225,7 +225,7 @@
         <artifactId>servlet-api-2.5</artifactId>
         <version>${org.mortbay.jetty.version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.seleniumhq.webdriver</groupId>
         <artifactId>webdriver-common</artifactId>
@@ -253,7 +253,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
+
   <scm>
     <connection>scm:git:git@github.com:dhanji/sitebricks.git</connection>
     <developerConnection>scm:git:git@github.com:dhanji/sitebricks.git</developerConnection>
@@ -273,7 +273,7 @@
       </plugin>
     </plugins>
   </build>
- 
+
   <!-- This should be removed when the googlecode repositories are migrated to the standard Nexus OSS repository infrastructure -->
   <distributionManagement>
     <snapshotRepository>
