--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
         <version>1.5.5</version>
       </dependency>
 
+<dependency>
+  <groupId>org.slf4j</groupId>
+  <artifactId>slf4j-log4j12</artifactId>
+  <version>1.6.4</version>
+</dependency>
+
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
