--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
   
   <modules>
     <module>sitebricks</module>
+    <module>sitebricks-annotations</module>
     <module>sitebricks-converter</module>
     <module>sitebricks-async</module>
     <module>sitebricks-client</module>
