--- a/sitebricks-web/pom.xml
+++ b/sitebricks-web/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.5-SNAPSHOT</version>
+    <version>0.8.6-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-web</artifactId>
   <name>Sitebricks :: Info Website</name>
@@ -66,4 +66,25 @@
       <version>${ch.qos.logback.version}</version>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.mortbay.jetty</groupId>
+        <artifactId>maven-jetty-plugin</artifactId>
+        <version>${org.mortbay.jetty.version}</version>
+        <configuration>
+          <contextPath>/</contextPath>
+          <webAppSourceDirectory>src/main/resources</webAppSourceDirectory>
+          <connectors>
+            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+              <port>4042</port>
+              <maxIdleTime>60000</maxIdleTime>
+            </connector>
+          </connectors>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
