--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -18,6 +18,10 @@
     </dependency>
     <dependency>
       <groupId>com.google.sitebricks</groupId>
+      <artifactId>sitebricks-decorator</artifactId>
+    </dependency>    
+    <dependency>
+      <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks-converter</artifactId>
     </dependency>
     <dependency>
