o initially creating a naive way for the decorator template compiler to get access to the source of the template so that a decorator can be found. this is not highly sophisticated yet, and in the prototype i'm looking for a hard-coded template name. ideally i would like a hierarchical structure where the decorator is taken from a known place in a hierarchy at each level so it's easy to specify defaults and easy to override.

--- a/sitebricks-decorator/pom.xml
+++ b/sitebricks-decorator/pom.xml
@@ -28,6 +28,11 @@
       <groupId>org.freemarker</groupId>
       <artifactId>freemarker</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-utils</artifactId>
+      <version>1.5.1</version>
+    </dependency>
     <!-- Testing -->
     <dependency>
       <groupId>junit</groupId>
