[maven-release-plugin] prepare release sitebricks-parent-0.8.5.1

--- a/sitebricks-acceptance-tests/pom.xml
+++ b/sitebricks-acceptance-tests/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.6-SNAPSHOT</version>
+    <version>0.8.5.1</version>
   </parent>
   <artifactId>sitebricks-acceptance-tests</artifactId>
   <name>Sitebricks :: Acceptance Tests</name>
