velocity template acceptance test passes

--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -17,6 +17,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+		<groupId>org.apache.velocity</groupId>
+		<artifactId>velocity</artifactId>
+		<version>1.7</version>
+	</dependency>
+    <dependency>
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks-converter</artifactId>
     </dependency>
