--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>com.google.sitebricks</groupId>
   <artifactId>sitebricks-parent</artifactId>
   <packaging>pom</packaging>
-  <version>0.8.5</version>
+  <version>0.8.5C</version>
   <name>Sitebricks :: Parent</name>
   <url>https://github.com/dhanji/sitebricks</url>
 
@@ -276,14 +276,12 @@
   <!-- This should be removed when the googlecode repositories are migrated to the standard Nexus OSS repository infrastructure -->
   <distributionManagement>
     <snapshotRepository>
-      <id>google-snapshots</id>
-      <name>Sonatype OSS Nexus Snapshots</name>
-      <url>https://oss.sonatype.org/content/repositories/google-snapshots</url>
+      <id>ext-snapshot-local</id>
+      <url>http://cerberus.local:8080/artifactory/ext-snapshot-local</url>
     </snapshotRepository>
     <repository>
-      <id>google-with-staging</id>
-      <name>Nexus OSS Staging Repository</name>
-      <url> https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <id>ext-release-local</id>
+      <url>http://cerberus.local:8080/artifactory/ext-release-local</url>
     </repository>
   </distributionManagement>
 
