--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,13 @@
 
   <modules>
     <module>sitebricks</module>
+    <module>sitebricks-annotations</module>
     <module>sitebricks-converter</module>
     <module>sitebricks-async</module>
     <module>sitebricks-client</module>
+    <module>sitebricks-easy-client</module>
     <module>sitebricks-acceptance-tests</module>
+    <module>sitebricks-test-support</module>
     <module>sitebricks-web</module>
     <module>sitebricks-mail</module>
     <module>sitebricks-options</module>
@@ -55,6 +58,11 @@
       <dependency>
         <groupId>com.google.sitebricks</groupId>
         <artifactId>sitebricks-client</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.sitebricks</groupId>
+        <artifactId>sitebricks-annotations</artifactId>
         <version>${project.version}</version>
       </dependency>
 
