--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -25,6 +25,10 @@
      <artifactId>sitebricks-client</artifactId>
     </dependency>
     <dependency>
+     <groupId>com.google.sitebricks</groupId>
+     <artifactId>sitebricks-annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.mvel</groupId>
       <artifactId>mvel2</artifactId>
     </dependency>
