AERO-488 update the pom.xml to use nightflight for 'mvn deploy' to artifactory * create VelocityEngineProvider to create just one engine for all template compilations

--- a/sitebricks-jetty-archetype/pom.xml
+++ b/sitebricks-jetty-archetype/pom.xml
@@ -40,11 +40,11 @@
   <distributionManagement>
     <snapshotRepository>
       <id>ext-snapshot-local</id>
-      <url>http://cerberus.local:8080/artifactory/ext-snapshot-local</url>
+      <url>http://nightflight.local:8383/artifactory/ext-snapshot-local</url>
     </snapshotRepository>
     <repository>
       <id>ext-release-local</id>
-      <url>http://cerberus.local:8080/artifactory/ext-release-local</url>
+      <url>http://nightflight.local:8383/artifactory/ext-release-local</url>
     </repository>
   </distributionManagement>
 </project>
