--- a/sitebricks-mail/pom.xml
+++ b/sitebricks-mail/pom.xml
@@ -14,7 +14,7 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.james</groupId>
-      <artifactId>apache-mime4j</artifactId>
+      <artifactId>apache-mime4j-core</artifactId>
       <version>0.7.2</version>
     </dependency>
     <dependency>
