--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -22,6 +22,11 @@
 		<version>1.7</version>
 	</dependency>
 	<dependency>
+		<groupId>org.apache.velocity</groupId>
+		<artifactId>velocity-tools</artifactId>
+		<version>2.0</version>
+	</dependency>
+	<dependency>
 		<groupId>oro</groupId>
 		<artifactId>oro</artifactId>
 		<version>2.0.8</version>
