--- a/sitebricks-easy-client/pom.xml
+++ b/sitebricks-easy-client/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.6-SNAPSHOT</version>
+    <version>0.8.6</version>
   </parent>
   <artifactId>sitebricks-easy-client</artifactId>
   <name>Sitebricks :: Easy Client</name>
@@ -39,7 +38,7 @@
     <dependency>
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks-test-support</artifactId>
-      <version>0.8.6-SNAPSHOT</version>
+      <version>0.8.6</version>
     </dependency>
     <dependency>
       <groupId>org.sonatype.sisu</groupId>
