--- a/sitebricks-test-support/pom.xml
+++ b/sitebricks-test-support/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.6-SNAPSHOT</version>
+    <version>0.8.6</version>
   </parent>
   <artifactId>sitebricks-test-support</artifactId>
   <name>Sitebricks :: Test Support</name>
