--- a/sitebricks-easy-client/pom.xml
+++ b/sitebricks-easy-client/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.6</version>
+    <version>0.8.7-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-easy-client</artifactId>
   <name>Sitebricks :: Easy Client</name>
@@ -38,7 +38,7 @@
     <dependency>
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks-test-support</artifactId>
-      <version>0.8.6</version>
+      <version>0.8.7-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.sonatype.sisu</groupId>
