--- a/sitebricks-options/pom.xml
+++ b/sitebricks-options/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.6</version>
+    <version>0.8.7-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-options</artifactId>
   <name>Sitebricks :: Options Module</name>
