--- a/sitebricks-jetty-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sitebricks-jetty-archetype/src/main/resources/archetype-resources/pom.xml
@@ -22,5 +22,39 @@
         <artifactId>sitebricks</artifactId>
         <version>0.8.7-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty</artifactId>
+      <version>6.1.9</version>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins> 
+		<plugin>
+		        <groupId>org.mortbay.jetty</groupId>
+		        <artifactId>maven-jetty-plugin</artifactId>
+		        <version>6.1.9</version>
+		        <executions>
+		                <execution>
+		                        <id>start-jetty</id>
+		                        <phase>pre-integration-test</phase>
+		                        <goals>
+		                                <goal>run</goal>
+		                        </goals>
+		                        <configuration>
+		                                <scanIntervalSeconds>0</scanIntervalSeconds>
+		                                <daemon>true</daemon>
+		                        </configuration>
+		                </execution>
+		                <execution>
+		                        <id>stop-jetty</id>
+		                        <phase>post-integration-test</phase>
+		                        <goals>
+		                                <goal>stop</goal>
+		                        </goals>
+		                </execution>
+		        </executions>
+		</plugin>
+    </plugins>
+  </build>
 </project>
