--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
     <org.mortbay.jetty.version>6.1.9</org.mortbay.jetty.version>
     <org.seleniumhq.webdriver.version>0.9.7376</org.seleniumhq.webdriver.version>
     <org.testng.version>5.8</org.testng.version>
-    <ch.qos.logback.version>0.9.9</ch.qos.logback.version>
+    <org.slf4j.version>1.6.4</org.slf4j.version>
+    <ch.qos.logback.version>1.0.6</ch.qos.logback.version>
   </properties>
 
   <modules>
@@ -39,6 +40,7 @@
 
   <dependencyManagement>
     <dependencies>
+      <!-- Sitebricks -->
       <dependency>
         <groupId>com.google.sitebricks</groupId>
         <artifactId>sitebricks-converter</artifactId>
@@ -51,7 +53,7 @@
       </dependency>
       <dependency>
         <groupId>com.google.sitebricks</groupId>
-        <artifactId>stat</artifactId>
+        <artifactId>sitebricks-stat</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -66,7 +68,7 @@
       </dependency>
       <dependency>
         <groupId>com.google.sitebricks</groupId>
-        <artifactId>sitebricks-decorator</artifactId>
+        <artifactId>sitebricks-test-support</artifactId>
         <version>${project.version}</version>
       </dependency>
 
@@ -180,7 +182,7 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.5.5</version>
+        <version>${org.slf4j.version}</version>
       </dependency>
 
       <dependency>
@@ -227,27 +229,28 @@
         <groupId>org.seleniumhq.webdriver</groupId>
         <artifactId>webdriver-common</artifactId>
         <version>${org.seleniumhq.webdriver.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.seleniumhq.webdriver</groupId>
         <artifactId>webdriver-support</artifactId>
         <version>${org.seleniumhq.webdriver.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.seleniumhq.webdriver</groupId>
         <artifactId>webdriver-htmlunit</artifactId>
         <version>${org.seleniumhq.webdriver.version}</version>
-        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.testng</groupId>
         <artifactId>testng</artifactId>
         <version>${org.testng.version}</version>
         <classifier>jdk15</classifier>
-        <scope>test</scope>
       </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.8.2</version>
+      </dependency>      
     </dependencies>
   </dependencyManagement>
 
