--- a/sitebricks-easy-client/pom.xml
+++ b/sitebricks-easy-client/pom.xml
@@ -38,7 +38,6 @@
     <dependency>
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks-test-support</artifactId>
-      <version>0.8.7-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -50,7 +49,6 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -95,6 +93,7 @@
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <classifier>jdk15</classifier>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
