--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
       <dependency>
         <groupId>org.mvel</groupId>
         <artifactId>mvel2</artifactId>
-        <version>2.1.Beta6</version>
+        <version>2.1.3.Final</version>
       </dependency>
 
       <dependency>
