Some test dep fixes to make servlet-api provided

--- a/sitebricks-channel/pom.xml
+++ b/sitebricks-channel/pom.xml
@@ -16,6 +16,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks</artifactId>
     </dependency>
