--- a/sitebricks-mail/pom.xml
+++ b/sitebricks-mail/pom.xml
@@ -16,9 +16,13 @@
       <version>0.7.2</version>
     </dependency>
     <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks</artifactId>
-      <version>0.8.7-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.netty</groupId>
