Cloud and cluster management utils

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
     <module>sitebricks-mail</module>
     <module>sitebricks-options</module>
     <module>sitebricks-channel</module>
+    <module>sitebricks-cloud</module>
+    <module>sitebricks-cluster</module>
     <module>stat</module>
     <module>slf4j</module>
   </modules>
@@ -79,6 +81,11 @@
       <dependency>
         <groupId>com.google.sitebricks</groupId>
         <artifactId>sitebricks-channel</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.sitebricks</groupId>
+        <artifactId>sitebricks-cloud</artifactId>
         <version>${project.version}</version>
       </dependency>
 
