--- a/sitebricks-converter/pom.xml
+++ b/sitebricks-converter/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.7-SNAPSHOT</version>
+    <version>0.8.7</version>
   </parent>
   <artifactId>sitebricks-converter</artifactId>
   <name>Sitebricks :: Type Conversion</name>
