--- a/sitebricks-mail/pom.xml
+++ b/sitebricks-mail/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.7-SNAPSHOT</version>
+    <version>0.8.7</version>
   </parent>
   <artifactId>sitebricks-mail</artifactId>
   <name>Sitebricks :: Mail Client</name>
