--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
     <org.testng.version>5.8</org.testng.version>
     <org.slf4j.version>1.6.4</org.slf4j.version>
     <ch.qos.logback.version>1.0.6</ch.qos.logback.version>
+    <cglib.full.version>2.0.2</cglib.full.version>
+    <lucene.version>4.0.0</lucene.version>
+    <jedis.version>2.0.0</jedis.version>
   </properties>
 
   <modules>
@@ -35,7 +38,10 @@
     <module>sitebricks-options</module>
     <module>sitebricks-channel</module>
     <module>sitebricks-cloud</module>
-    <!-- module>sitebricks-cluster</module -->
+    <module>sitebricks-cluster</module>
+    <module>sitebricks-persist</module>
+    <module>sitebricks-persist-disk</module>
+    <module>sitebricks-persist-redis</module>
     <module>stat</module>
     <module>slf4j</module>
   </modules>
@@ -90,6 +96,17 @@
       </dependency>
 
       <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>${jedis.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-core</artifactId>
+        <version>${lucene.version}</version>
+      </dependency>
+
+      <dependency>
         <groupId>org.mvel</groupId>
         <artifactId>mvel2</artifactId>
         <version>2.1.3.Final</version>
@@ -99,6 +116,12 @@
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <version>r09</version>
+      </dependency>
+
+      <dependency>
+        <groupId>cglib</groupId>
+        <artifactId>cglib-full</artifactId>
+        <version>${cglib.full.version}</version>
       </dependency>
 
       <dependency>
@@ -151,6 +174,12 @@
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
         <version>2.5</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.persistence</groupId>
+        <artifactId>persistence-api</artifactId>
+        <version>1.0.2</version>
       </dependency>
 
       <dependency>
@@ -211,12 +240,6 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-core</artifactId>
         <version>${ch.qos.logback.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.softee</groupId>
-        <artifactId>pojo-mbean</artifactId>
-        <version>1.1</version>
       </dependency>
 
       <dependency>
