--- a/sitebricks-persist-sql/pom.xml
+++ b/sitebricks-persist-sql/pom.xml
@@ -11,6 +11,22 @@
   <artifactId>sitebricks-persist-sql</artifactId>
   <name>Sitebricks :: Persistence Module (SQL)</name>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.jolbox</groupId>
+        <artifactId>bonecp</artifactId>
+        <version>0.8.0-alpha1</version>
+        <exclusions>
+          <exclusion>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>org.testng</groupId>
@@ -34,11 +50,24 @@
       <groupId>com.jolbox</groupId>
       <artifactId>bonecp</artifactId>
       <version>0.8.0-alpha1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.2.9</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
-    <finalName>sitebricks-persist-disk</finalName>
+    <finalName>sitebricks-persist-sql</finalName>
     <resources>
       <resource>
         <directory>src/test/resources</directory>
